# PAA

./: .gitignore  CMakeLists.txt  README.md  SettingsSingleton.cpp  SettingsSingleton.h  canvas.cpp  canvas.h  controls.cpp  controls.h  cuda.sln  cuda.vcxproj  cuda.vcxproj.filters  defaults.h  fractal.cpp  fractal.h  kernel.cu  kernel.cuh  main.cpp  utils.cpp  utils.h
